tests/neg/i22357a.scala
def main =
  new ([A] =>> Int)(2) // error
