tests/neg/i22357a.check
-- Error: tests/neg/i22357a.scala:2:6 ----------------------------------------------------------------------------------
2 |  new ([A] =>> Int)(2) // error
  |      ^^^^^^^^^^^^^
  |      [A] =>> Int does not have a constructor
